--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "glamor": "^2.20.40",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-canvas-draw": "^1.1.0",
