--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "glamor": "^2.20.40",
+    "install": "^0.13.0",
     "node-sass": "^4.13.1",
+    "npm": "^6.13.6",
     "react": "^16.12.0",
     "react-canvas-draw": "^1.1.0",
     "react-device-detect": "^1.11.14",
     "react-dom": "^16.12.0",
+    "react-google-login": "^5.0.7",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
