--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-canvas-draw": "^1.1.0",
     "react-device-detect": "^1.11.14",
     "react-dom": "^16.12.0",
+    "react-emoji-render": "^1.2.1",
     "react-google-login": "^5.0.7",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
