--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "npm": "^6.13.6",
     "react": "^16.12.0",
     "react-canvas-draw": "^1.1.0",
+    "react-color": "^2.18.0",
     "react-device-detect": "^1.11.14",
     "react-dom": "^16.12.0",
     "react-emoji-render": "^1.2.1",
