--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "react-scripts": "3.3.0",
     "react-scroll-to-bottom": "^1.3.2",
     "redux": "^4.0.5",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "sweetalert2": "^9.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
