--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-device-detect": "^1.11.14",
     "react-dom": "^16.12.0",
     "react-emoji-render": "^1.2.1",
+    "react-flip-move": "^3.0.4",
     "react-google-login": "^5.0.7",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
