--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-scroll-to-bottom": "^1.3.2",
+    "react-tooltip": "^3.11.2",
     "redux": "^4.0.5",
     "socket.io-client": "^2.3.0",
     "sweetalert2": "^9.7.0"
